Fixed the issue of not showing the data on SurveyReview.js and added styling to label

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,10 @@ nav ul a {
     font-weight: bold!important;
 }
 
+label {
+    font-size: 1rem!important;
+}
+
 .StripeCheckout span {
     background-image: none!important;
     background: gray!important;
